--- a/resource-planner.html
+++ b/resource-planner.html
@@ -152,7 +152,7 @@
             border-radius: 8px;
             cursor: pointer;
             transition: all 0.3s ease;
-            font-size: 1.2rem;
+            font-size: 1.32rem;
             display: inline-flex;
             align-items: center;
             justify-content: center;
@@ -763,7 +763,7 @@
             <div class="btn-group">
                 <button class="btn-icon" onclick="openModal('person')">
                     <span>👤</span>
-                    <div class="tooltip">Add Person</div>
+                    <div class="tooltip">Add Team Member</div>
                 </button>
                 <button class="btn-icon" onclick="openModal('client')">
                     <span>🏢</span>
