--- a/resource-planner.html
+++ b/resource-planner.html
@@ -55,7 +55,7 @@
         }
 
         .logo-container img {
-            height: 50px;
+            height: 42px;
             width: auto;
             max-width: 200px;
             object-fit: contain;
@@ -67,7 +67,7 @@
 
         h1 {
             font-family: 'Crimson Pro', serif;
-            font-size: 3.5rem;
+            font-size: 2.5rem;
             font-weight: 600;
             letter-spacing: -0.02em;
             margin-bottom: 0.5rem;
@@ -85,7 +85,11 @@
             }
             
             h1 {
-                font-size: 2.5rem;
+                font-size: 2rem;
+            }
+            
+            .logo-container img {
+                height: 36px;
             }
         }
 
