--- a/resource-planner.html
+++ b/resource-planner.html
@@ -568,7 +568,7 @@
 
         .assignment {
             background: linear-gradient(135deg, var(--accent-primary), #f97316);
-            color: var(--bg-primary);
+            color: #ffffff;
             padding: 0.5rem;
             border-radius: 6px;
             font-size: 0.85rem;
@@ -578,6 +578,7 @@
             transition: all 0.2s ease;
             animation: slideIn 0.3s ease-out;
             position: relative;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .assignment.dragging {
@@ -593,11 +594,14 @@
         .assignment-project {
             font-weight: 700;
             margin-bottom: 0.25rem;
+            color: #ffffff;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
         }
 
         .assignment-client {
             font-size: 0.75rem;
-            opacity: 0.9;
+            opacity: 0.95;
+            color: #ffffff;
         }
 
         .assignment-percentage {
@@ -605,7 +609,8 @@
             font-weight: 700;
             margin-top: 0.25rem;
             padding-top: 0.25rem;
-            border-top: 1px solid rgba(0,0,0,0.2);
+            border-top: 1px solid rgba(255, 255, 255, 0.3);
+            color: #000000; /* Black for maximum contrast */
         }
 
         .assignment-delete {
